--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,12 @@
   padding: 0;
   margin: 0;
 }
+
+html {
+  color-scheme: dark;
+}
+
+body {
+  background-color: hsl(var(--nextui-background));
+  color: hsl(var(--nextui-foreground));
+}
